<resources>
    <string name="app_name">Child Sex Reporting Application</string>
    <string name="witness_of_a_suspicious_situation">Witness of a Suspicious Situation?</string>
    <string name="dont_look_away_be_aware_and_report_the_sexual_exploitation_of_children_in_your_community">Dont Look Away! Be Aware and report the sexual exploitation of children in your community</string>
    <string name="name">Username</string>
    <string name="password">Password</string>
    <string name="image">Image</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Email</string>
    <string name="child_abuse_reporting_application">Child Abuse Reporting Application</string>
    <string name="textviewSignUp">Crime Report</string>
    <string name="button">Sign Up</string>
    <string name="email">Email</string>
    <string name="passwordSignup">Password</string>
    <string name="signupImmage">logo</string>
    <string name="textviewSignIn">CRIME REPORT</string>
    <string name="textviewReportCrime">Register Complaint</string>
    <string name="textviewViewStatus">View Status</string>
    <string name="textview">PROFILE</string>
    <string name="textviewReg">REGISTER COMPLAINT</string>
    <string name="textviewCom">VIEW STATUS</string>
    <string name="textviewvIEW">VIEW REGISTERED COMPLAINTS</string>
    <string name="emailSignUp">Email</string>
    <string name="full_name">Full name</string>
    <string name="create_new_account">Create New Account</string>
    <string name="phone_number">Phone number</string>
    <string name="register_complaint">Register Complaint</string>
    <string name="view_status">View status</string>
    <string name="forum">Forum</string>
    <string name="sign_in">Sign in</string>
    <string name="new_here_create_account">New here? Create Account</string>
    <string name="contact_phone">Contact phone</string>
    <string name="location">Location</string>
    <string name="crime_title">Crime Title</string>
    <string name="crime_full_details">Crime full details</string>
    <string name="report">REPORT!</string>
    <string name="user_chat_board">USER CHAT BOARD</string>
    <string name="enter_comment">Enter Comment</string>
    <string name="admin_dashboard">Admin Dashboard</string>
    <string name="profile">profile</string>
    <string name="crimes">Crimes</string>
    <string name="forumu">Forum</string>
    <string name="log_outi">log out</string>
    <string name="welcome">Welcome,</string>
    <string name="log_in_as">Log in as:</string>
    <string name="adminSra">Admin</string>
    <string name="userla">User</string>
    <string name="admin_loginhe">Admin Login</string>
    <string name="emaillol">Email</string>
    <string name="sign_inuh">Sign In</string>
    <string name="new_here_create_an_accountii">New Here? Create an Account</string>
</resources>