<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bbbb"
    android:orientation="vertical"
    tools:context=".ALogin">



    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/muli_black"
        android:padding="20dp"
        android:text="@string/admin_loginhe"
        android:textColor="@color/white"
        android:layout_marginTop="25dp"
        android:textSize="50sp" />

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        >


        <EditText
            android:id="@+id/aemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:background="@drawable/buton"
            android:padding="15dp"
            android:drawableLeft="@drawable/mwe"
            android:hint="@string/emaillol"
            android:drawablePadding="15dp"
            android:importantForAutofill="no"
            android:drawableStart="@drawable/mwe" />

        <EditText
            android:id="@+id/apassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginTop="30dp"
            android:background="@drawable/buton"
            android:padding="15dp"
            android:drawableLeft="@drawable/mweee"
            android:hint="@string/password"
            android:drawablePadding="15dp"
            android:inputType="textPassword"

            android:importantForAutofill="no"
            android:drawableStart="@drawable/mweee" />

        <Button
            android:id="@+id/btnAsignin"
            android:layout_width="150dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:layout_marginTop="25dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_inuh"
            android:padding="10dp"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="25sp"
            />

        <TextView
            android:id="@+id/iviyayi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aclonica"
            android:text="@string/new_here_create_an_accountii"
            android:layout_marginTop="25dp"
            android:gravity="center_horizontal"
            android:textColor="@android:color/holo_orange_dark" />


    </LinearLayout>


</LinearLayout>
</ScrollView>