<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgd"
    android:orientation="vertical"
    tools:context=".ULogin">




    <TextView
        android:id="@+id/textView"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="2dp"
        android:fontFamily="serif"
        android:gravity="center_horizontal"
        android:text="@string/witness_of_a_suspicious_situation"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/aclonica"
        android:gravity="center_horizontal"
        android:text="@string/dont_look_away_be_aware_and_report_the_sexual_exploitation_of_children_in_your_community"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/image"
        app:srcCompat="@drawable/eyeee"
        tools:ignore="VectorDrawableCompat" />


    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">


        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/buton"
            android:padding="10dp"
            android:ems="10"
            android:drawableLeft="@drawable/mail"
            android:drawablePadding="10dp"
            android:hint="@string/username"
            android:textColorHint="@color/black"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"

            android:drawableStart="@drawable/mail" />

        <EditText
            android:id="@+id/editTextPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/buton"
            android:padding="10dp"
            android:drawableLeft="@drawable/loc"
            android:drawablePadding="10dp"
            android:textColorHint="@color/black"
            android:ems="10"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:drawableStart="@drawable/loc" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnSignIn"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:background="@color/black"
                android:textSize="20sp"
                android:padding="5dp"
                android:textColor="@color/white"
                android:text="@string/sign_in"
                android:textAllCaps="false" />

            <TextView
                android:id="@+id/textCreate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/aclonica"
                android:onClick="signUp"
                android:gravity="center"
                android:text="@string/new_here_create_account"
                android:textColor="@android:color/holo_orange_dark" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:visibility="invisible" />


    </LinearLayout>

    
</LinearLayout>
</ScrollView>