<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/backgd"
        android:orientation="vertical"
        tools:context=".SignIn">


    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:fontFamily="@font/muli_black"
        android:padding="15dp"
        android:gravity="center_horizontal"
        android:text="@string/textviewSignIn"
        android:textColor="@color/white"
        android:textSize="32sp" />

    <RelativeLayout
        android:layout_width="350dp"
        android:layout_gravity="center_horizontal"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@drawable/butbg"
            android:drawableTop="@drawable/registration_40px"
            android:drawablePadding="10dp"
            android:fontFamily="sans-serif-medium"
            android:padding="10dp"
            android:text="@string/register_complaint"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="18sp" />
        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/butbg"
            android:padding="10dp"
            android:layout_below="@id/button2"
            android:drawableTop="@drawable/registration_40px"
            android:drawablePadding="10dp"
            android:text="@string/view_status"
            android:layout_marginTop="50dp"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/butbg"
            android:padding="10dp"
            android:layout_below="@id/button3"
            android:drawableTop="@drawable/registration_40px"
            android:drawablePadding="10dp"
            android:text="@string/profile"
            android:layout_marginTop="50dp"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnforum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/butbg"
            android:padding="10dp"
            android:layout_below="@id/button4"
            android:drawableTop="@drawable/registration_40px"
            android:drawablePadding="10dp"
            android:text="@string/forum"
            android:layout_marginTop="50dp"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="18sp" />

    </RelativeLayout>


</LinearLayout>

</ScrollView>

