<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgd"
    android:orientation="vertical"
    tools:context=".RegisterAcrime">


    <EditText
        android:id="@+id/crimeTitle"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/crime_title"
        android:layout_gravity="center_horizontal"
        android:textSize="25sp"
        android:textColorHint="@color/black"
        android:padding="10dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/butbg"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/Location"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/location"
        android:layout_gravity="center_horizontal"
        android:textSize="25sp"
        android:textColorHint="@color/black"
        android:padding="10dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/butbg"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/contactPhone"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone"
        android:hint="@string/contact_phone"
        android:layout_gravity="center_horizontal"
        android:textSize="25sp"
        android:textColorHint="@color/black"
        android:padding="10dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/butbg"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/crimeDetails"
        android:layout_width="300dp"
        android:hint="@string/crime_full_details"
        android:textColorHint="@color/black"
        android:textSize="25sp"
        android:padding="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:ems="10"
        android:background="#424242"
        android:layout_marginTop="40dp"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/btnReport"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:background="@color/black"
        android:padding="20dp"
        android:text="@string/report"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="20sp" />

    <ProgressBar
        android:id="@+id/progressBar3"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:visibility="invisible"/>


</LinearLayout>
</ScrollView>