<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:background="@drawable/backgd"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".SignUp">


    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aclonica"
        android:text="@string/create_new_account"
        android:gravity="center"
        android:layout_marginTop="35dp"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="30sp" />

            <EditText
                android:id="@+id/editTextPersonName"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="60dp"
                android:ems="10"
                android:drawableLeft="@drawable/pencil"
                android:background="@drawable/butbg"
                android:inputType="textPersonName"
                android:hint="@string/full_name"
                android:drawablePadding="10dp"
                android:textSize="20sp"
                android:padding="20dp"
                android:textColorHint="@color/black"
                android:drawableStart="@drawable/pencil"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/editTextEmailAddress"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                android:ems="10"
                android:drawableLeft="@drawable/mail"
                android:hint="@string/emailSignUp"
                android:textColorHint="@color/black"
                android:background="@drawable/butbg"
                android:drawablePadding="10dp"
                android:textSize="20sp"
                android:padding="20dp"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:drawableStart="@drawable/mail" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                android:textColorHint="@color/black"
                android:background="@drawable/butbg"
                android:drawableLeft="@drawable/loc"
                android:drawablePadding="10dp"
                android:textSize="20sp"
                android:padding="20dp"
                android:ems="10"
                android:hint="@string/passwordSignup"
                android:inputType="textPassword"
                android:importantForAutofill="no"
                android:drawableStart="@drawable/loc" />

            <EditText
                android:id="@+id/editTextphone"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                android:ems="10"
                android:drawablePadding="10dp"
                android:textColorHint="@color/black"
                android:background="@drawable/butbg"
                android:textSize="20sp"
                android:drawableLeft="@drawable/phone"
                android:padding="20dp"
                android:inputType="phone"
                android:hint="@string/phone_number"
                android:importantForAutofill="no"
                android:drawableStart="@drawable/phone" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:padding="20dp"
        android:text="@string/button"
        android:background="@color/black"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="20sp" />

            <ProgressBar
                android:id="@+id/progressBar2"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:visibility="invisible" />


</LinearLayout>
</ScrollView>